8320237: C2: late inlining of method handle invoke causes duplicate lines in PrintInlining output